[package]
name = "throttled-json-rpc"
version = "0.1.0"
authors = [
    "Aiden McClelland <aiden.k.mcclelland@gmail.com>",
    "PIVX Labs",
    "Liquid369"
]
repository = "https://github.com/DR-BoneZ/throttled-json-rpc-rs"
homepage = "https://github.com/DR-BoneZ/throttled-json-rpc-rs"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/throttled-json-rpc"
description = "Macro-based throttled JSON-RPC client with rate limiting and batching support"
keywords = ["json-rpc", "rpc", "client", "throttle", "rate-limit"]
categories = ["network-programming", "api-bindings", "asynchronous"]
edition = "2021"
rust-version = "1.70"

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[dev-dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "time", "test-util"] }